syntax="proto3";

package pb;

import "user.proto";

option go_package = "github.com/okoroemeka/la-candela-backend-rpc/pb";

message CreateUserRequest {
 string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message CreateUserResponse {
  User user = 1;
}
